--- a/public/assets/scss/partials/_base.scss
+++ b/public/assets/scss/partials/_base.scss
@@ -12,12 +12,12 @@
 
 @font-face {
   font-family: "Impact";
-  src: url("impact.ttf") format("ttf");
+  src: url("/assets/fonts/impact.ttf") format("ttf");
 }
 
 @font-face {
   font-family: "Myriad Pro";
-  src: url("MYRIADPRO-REGULAR.woff") format("woff");
+  src: url("/assets/fonts/MYRIADPRO-REGULAR.woff") format("woff");
 }
 
 body {
