fixed routes in hrefs

--- a/src/_includes/footer.ejs
+++ b/src/_includes/footer.ejs
@@ -1,4 +1,4 @@
 <footer>
-    <img src="../assets/img/logo.png" alt="Logo del blog">
+    <img src="/assets/img/logo.png" alt="Logo del blog">
     @ 2022 Camila Arzuza
 </footer>
