--- a/src/_includes/header.ejs
+++ b/src/_includes/header.ejs
@@ -1,5 +1,5 @@
 <header>
-    <a href="/"><img src="./assets/img/logo.png" alt="Logo del blog"></a>
+    <a href="/"><img src="/assets/img/logo.png" alt="Logo del blog"></a>
     <nav>
 
     </nav>
