--- a/src/careers.ejs
+++ b/src/careers.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carreras</title>
-    <link rel="stylesheet" href="./src/assets/css/careers.css">
+    <link rel="stylesheet" href="/assets/css/careers.css">
 </head>
 <body>
     <main class="content">
