--- a/src/projects-nurse.ejs
+++ b/src/projects-nurse.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyectos Enfermería</title>
-    <link rel="stylesheet" href="./assets/css/nurseProjects.css">
+    <link rel="stylesheet" href="/assets/css/nurseProjects.css">
 </head>
 <body>
     <main>
