--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -4,34 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My homepage</title>
+  <title>{{ title }}</title>
   <link rel="stylesheet" href="/css/style.css">
   <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
 
-  <header>
-    <a href="/"><img src="/assets/img/logo.png" alt="Logo del blog"></a>
-    <nav>
-        <ul>
-            <li><a href="/">Portafolio</a></li>
-            <li><a href="/postHome">Blog</a></li>
-        </ul>
-    </nav>
-</header>
+  {% include 'header.njk'  %}
     
-    
-<main class="about__content">
-    <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-        Rerum laudantium quas deleniti ipsum voluptatibus non adipisci nobis minima fugit dolor.
-    </p>
-</main>
+    {{ content | safe }}
 
-  <footer>
-    <img src="/assets/img/logo.png" alt="Logo del blog">
-    @ 2022 Camila Arzuza
-</footer>
+  {% include 'footer.njk' %}
 
   <script>
   if (window.netlifyIdentity) {
