--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -2,8 +2,8 @@
     <a href="/"><img src="/assets/img/logo.png" alt="Logo del blog"></a>
     <nav>
         <ul>
-            <li><a href="/">Portafolio</a></li>
-            <li><a href="/postHome">Blog</a></li>
+            <li><a href="/postHome">Portafolio</a></li>
+            <li><a href="/blog">Blog</a></li>
         </ul>
     </nav>
 </header>
